# mochify-cli

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  SKILL.md  glama.json  package-lock.json  smithery.yaml
.github/workflows/: ci.yml  release.yml
src/: api.rs  cli.rs  credentials.rs  main.rs
src/mcp/: tools.rs
