[package]
name = "mochify"
version = "1.3.0"
edition = "2024"
license = "MIT"
description = "CLI and MCP server for privacy-first image compression and conversion via mochify.app"
repository = "https://github.com/getmochify/mochify-cli"
homepage = "https://mochify.app"
readme = "README.md"
keywords = ["image", "compression", "avif", "webp", "mcp"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "mochify"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
imagesize = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
indicatif = "0.17"
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
dirs = "5"
open = "5"
toml = "0.8"
rand = "0.8"
atty = "0.2"
